Updated to the latest twitter4j library
Signed-off-by: Patrick Reinhart <patrick@reini.net>